fixing navbar collapse - but boy is it ugly

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -139,6 +139,14 @@ html, body {
     margin-top: 50px;
 }
 
+.navbar {
+    margin-bottom: 0;
+}
+
+.navbar-btn {
+    margin-right: 5px;
+}
+
 //End Team Page
 
 //Not found page
